tests/ui/transmute-mut-src-dst-not-references.nightly.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-mut-src-dst-not-references.rs:16:59
   |
16 | const SRC_DST_NOT_REFERENCES: &mut usize = transmute_mut!(0usize);
   |                                            ---------------^^^^^^-
   |                                            |              |
   |                                            |              expected `&mut _`, found `usize`
   |                                            expected due to this
   |
   = note: expected mutable reference `&mut _`
                           found type `usize`
help: consider mutably borrowing here
   |
16 | const SRC_DST_NOT_REFERENCES: &mut usize = transmute_mut!(&mut 0usize);
   |                                                           ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
